# nectar-freshdesk

./: .env  .git-blame-ignore-revs  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  Dockerfile  Makefile  README.md  pin-requirements.sh  requirements.txt  setup.cfg  setup.py  tox.ini  uwsgi.ini  wsgi.py
docker/: .dockerignore  Dockerfile  Dockerfile.debian  docker-run-agent.sh  docker-run-api.sh
etc/nectar-freshdesk/: config-generator.conf
nectar_freshdesk/: __init__.py  app.py  config.py  version.py  wsgi.py
nectar_freshdesk/auth/: api.py
nectar_freshdesk/cmd/: agent.py  api.py
nectar_freshdesk/openstack/: agent.py  api.py  clients.py  freshdesk.py  messaging.py  service.py  utils.py
nectar_freshdesk/openstack/resource/: instance.py  project.py  role.py  user.py  volume.py
nectar_freshdesk/tests/etc/: nectar-freshdesk.conf
nectar_freshdesk/tests/unit/: base.py  fakes.py  test_agent.py
nectar_freshdesk/tests/unit/auth/: test_api.py
nectar_freshdesk/tests/unit/openstack/: test_utils.py
