[metadata]
name = nectar-freshdesk
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = Nectar Freshdesk integration
description_file =
    README.md
description_content_type = text/markdown
home_page = https://github.com/NeCTAR-RC/nectar-freshdesk
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages = nectar_freshdesk
include_package_data = True

[entry_points]
console_scripts =
    nectar-freshdesk = nectar_freshdesk.cmd.api:main
    nectar-freshdesk-agent = nectar_freshdesk.cmd.agent:main

oslo.config.opts =
    nectar-freshdesk = nectar_freshdesk.config:list_opts

[pbr]
skip_changelog=true
skip_authors=true
